# snyk-python-plugin

./: .eslintrc  .gitignore  .releaserc  .snyk  .travis.yml  CONTRIBUTING.md  README.md  appveyor.yml  catalog-info.yaml  dev-requirements.txt  package.json  pyproject.toml  setup.py  tox.ini  tsconfig.json
.circleci/: config.yml
.github/: CODEOWNERS  CONTRIBUTING.md
lib/: apply-remediation-implementation.ts  errors.ts  index.js  index.ts  inspect-implementation.ts  requirements-file-parser.ts  sub-process.js  sub-process.ts  types.ts
lib/dependencies/: build-dep-graph.ts  index.ts  inspect-implementation.ts  poetry.ts  pysrc.ts  sub-process.ts
lib/update-dependencies/: index.ts
plug/: pip_resolve.py
plug/requirements/: parser.py  requirement.py
pysrc/: README.md  constants.py  pip_resolve.py  pipfile.py  pkg_resources.py  reqPackage.py  setup_file.py  test_pip_resolve.py  test_pip_resolve_py2.py  test_pip_resolve_py3.py  test_pip_resolve_py3_12.py  test_pipfile.py  test_requirements.py  utils.py
pysrc/_vendor/: jaraco.pyi  platformdirs.pyi  pyparsing.py  typing_extensions.py  vendor.txt
pysrc/pkg_resources/: __init__.py
test/: Dockerfile  _setup.test.ts  build-args.spec.ts  build-args.test.js  contamination-filtering.spec.ts  error-handling.test.ts  inspect-provenance.test.ts  inspect.test.js  manual.js  python-plugin.test.js  remediation.spec.ts  remediation.test.ts  test-utils.js  test-utils.ts  tsconfig.json
test/workspaces/poetry-app-optional-dependencies/: pyproject.toml
test/workspaces/poetry-v2-app/: pyproject.toml
tools/: vendored.py
(+115 files in other folders)
