[project]
name = "poetry-fixtures-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jinja2 (>=3.1.2)",
    "isOdd (>=0.1.2)",
]
[build-system]
requires = ["poetry-core>=3.6"]
build-backend = "poetry.core.masonry.api"
